--- a/trunk/www-framework/kpw/html/css/style.css
+++ b/trunk/www-framework/kpw/html/css/style.css
@@ -88,6 +88,7 @@
 }
 #main table tr.confirmed td {
     background-color: #eeffff;
+    font-weight: bold;
 }
 #main table td.number {
     width: 5%;
