--- a/www-framework/kpw/template/tt/user/confirm.html
+++ b/www-framework/kpw/template/tt/user/confirm.html
@@ -24,5 +24,15 @@
                 <li><span class="property">예금주</span>: 김도형키디(KPW2008)</li>
 		<li><span class="property">등록비</span>: [% IF user.type == 'student' %]청소년 및 학생(대학원생 포함)  5,000원[% ELSE %]직장인 10,000원[% END %]</li>
               </ul>
-              [% END %]
+              [% ELSIF user.confirm == 'wait' %]
+	      <p>
+		현재 등록대기자 명단에 올라있습니다. 
+		차후 공지를 참조하세요.
+	      </p>
+	      [% ELSIF user.confirm == 'complete' %]
+	      <p>
+		Korean Perl Workshop 2008 에 참가를 확정해주셔서 감사합니다.
+		8월 23일 행사당일에 뵙겠습니다.
+	      </p>
+	      [% END %]
             </div>
