--- a/trunk/www-framework/kpw/template/tt/_include/www_head.html
+++ b/trunk/www-framework/kpw/template/tt/_include/www_head.html
@@ -6,5 +6,6 @@
           <li><a href="[% c.config.url %]faq"[% ' class="selected"' IF c.req.path_info.match('faq') %]>FAQ</a></li>
           <li><a href="[% c.config.url %]links"[% ' class="selected"' IF c.req.path_info.match('links') %]>링크</a></li>
           <li><a href="[% c.config.url %]register"[% ' class="selected"' IF c.req.path_info.match('register') %]>참가신청</a></li>
+	  <li><a href="[% c.config.url %]user"[% 'class="selected"' IF c.req.path_info.match('user') %]>등록확인</a></li>
         </ul>
       </div>
