--- a/www-framework/kpw/template/tt/register/default.html
+++ b/www-framework/kpw/template/tt/register/default.html
@@ -1,4 +1,23 @@
             <h1>사전등록</h1>
+[% IF waits.size %]
+            <div class="news">
+              <h3>현재 등록시 대기자 명단으로 올라갑니다!</h3>
+              <p>
+                현재 총인원 80명중 발표자 및 스폰서 예약 쿼터를 제외한
+                [% users.size %]분의 신청 가능 공간이 모두 찼습니다.
+                일단 선착순 [% users.size %]분은 사전등록 완료 상태이시며,
+                [% users.size + 1 %]번째 부터 등록하신 [% waits.size %] 분들부터는
+		대기자 명단에 들어가신 상태입니다.
+              </p>
+              <p>
+                행사 3일 전까지 1차 등록자 분들 중에서 입금하지 않으시거나
+                참가 포기를 하시는 경우 남는 슬롯은 2차 등록시
+                대기자 명단의 순서대로 넘어갑니다.
+                이때는 저희가 메일 또는 휴대폰으로 대기자분들께 직접
+                연락을 드리는 방식으로 2차 등록을 진행할 예정입니다!
+              </p>
+            </div>
+[% END %]
             <div class="news">
               <h3>쿼터 참석자분들은 따로 신청받습니다!</h3>
               <p>
