--- a/www-framework/kpw/template/tt/register/default.html
+++ b/www-framework/kpw/template/tt/register/default.html
@@ -63,7 +63,7 @@
                     <dd>
                       <select name="type" class="short">
                         <option value=""></option>
-                        <option value="worker">직장인</option>
+                        <option value="worker">사회인</option>
                         <option value="student">학생 및 청소년</option>
                       </select>
                     </dd>
