--- a/www-framework/kpw/template/tt/admin/default.html
+++ b/www-framework/kpw/template/tt/admin/default.html
@@ -12,21 +12,21 @@
                 <thead>
                   <tr>
                     <th>no</th>
-                    <th>이름</th>
-                    <th>닉네임</th>
-		    <th>email</th>
-                    <th>status</th>
+                    <th>이름(닉)</th>
+                    <th>등록시간</th>
+		    <th>연락처</th>
+                    <th>상태</th>
 		    <th>action!</th>
                   </tr>
                 </thead>
                 <tbody>
 [% FOREACH user IN rs %]
                   <tr>
-                    <td class="number">[% user.no %]</td>
-                    <td>[% user.name | html %]</td>
-                    <td>[% user.nick | html %]</td>
+                    <td class="number">[% loop.index | html %] (dbno: [% user.no | html %])</td>
+                    <td>[% user.name | html %] ([% user.nick | html %])</td>
+                    <td>[% user.created_on | html %]</td>
 		    <td class="email"><a href="mailto:[% user.email | html %]">[% user.email | html %]</a><br>[% user.phone %]</td>
-		    <td>[% c.config.status.${user.confirm}.name || user.confirm %]</td>
+		    <td>[% c.config.status.${user.confirm}.name || user.confirm %][% user.type == "student" AND "(학생)" | html %]</td>
 		    <td class="button">
  [% IF user.confirm == 'reserv' %]
 		      <button onClick="window.location='[% c.config.url %]admin/edit?no=[% user.no %]&amp;confirm=complete'">입금확인</button>
