--- a/trunk/www-framework/kpw/template/tt/_include/wrapper.html
+++ b/trunk/www-framework/kpw/template/tt/_include/wrapper.html
@@ -1,9 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko">
 <html>
   <head>
+    <meta http-equiv="Content-Language" content="ko" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8;" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
 [% IF c.req.path_info.match('register') %]
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noindex, nofollow" />
 [% END %]
 [% IF c.req.path_info.match('schedule') %]
     <link rel="stylesheet" href="[% c.config.url %]resources/css/ext-all.css" type="text/css" />
