--- a/www-framework/kpw/template/tt/admin/default.html
+++ b/www-framework/kpw/template/tt/admin/default.html
@@ -88,6 +88,8 @@
                         <option value="sponsor">sponsor</option>
                       </select>
                     </dd>
+                    <dt><label for="comment">코멘트</label>:&nbsp;</dt>
+                    <dd><textarea rows="5" id="comment" name="comment" class="long"></textarea></dd>
                   </dl>
                   <div class="button"><input type="submit" value="신청" /></div>
                 </fieldset>
