스폰서 참석이나, 스피커의 경우도 등록시 커멘트 추가할 수 있게 함

--- a/trunk/www-framework/kpw/template/tt/admin/default.html
+++ b/trunk/www-framework/kpw/template/tt/admin/default.html
@@ -88,6 +88,8 @@
                         <option value="sponsor">sponsor</option>
                       </select>
                     </dd>
+                    <dt><label for="comment">코멘트</label>:&nbsp;</dt>
+                    <dd><textarea rows="5" id="comment" name="comment" class="long"></textarea></dd>
                   </dl>
                   <div class="button"><input type="submit" value="신청" /></div>
                 </fieldset>
