--- a/www-framework/kpw/template/tt/admin/default.html
+++ b/www-framework/kpw/template/tt/admin/default.html
@@ -75,7 +75,7 @@
                     <dt>직업:&nbsp;</dt>
                     <dd>
                       <select name="type" class="short">
-                        <option value="worker">직장인</option>
+                        <option value="worker">사회인</option>
                         <option value="student">학생 및 청소년</option>
                       </select>
                     </dd>
