--- a/www-framework/kpw/template/tt/default/default.html
+++ b/www-framework/kpw/template/tt/default/default.html
@@ -1,5 +1,29 @@
             <h1>Korean Perl Workshop 2008: Rising Perl</h1>
             <div class="news">
+              <h2>현재 등록시 대기자 명단으로 올라갑니다!</h2>
+              <p class="meta">2008년 08월 14일 by keedi</p>
+              <p>
+                현재 총인원 80명중 발표자 및 스폰서 예약 쿼터를 제외한
+                신청 가능 공간이 모두 찼습니다.
+                <a href="[% c.config.url %]register"> 참가신청 </a>
+                또는
+                <a href="[% c.config.url %]user">등록확인</a>
+                화면에서 사전등록 완료 상태인지, 또는 대기자 상태인지
+                확인하실 수 있습니다.
+              </p>
+              <p>
+                행사 3일 전까지 1차 등록자 분들 중에서 입금하지 않으시거나
+                참가 포기를 하시는 경우 남는 슬롯은 2차 등록시
+                대기자 명단의 순서대로 넘어갑니다.
+                이때는 저희가 메일 또는 휴대폰으로 대기자분들께 직접
+                연락을 드리는 방식으로 2차 등록을 진행할 예정입니다!
+              </p>
+              <p>
+                많은 관심과 성원 고맙습니다. :-)
+              </p>
+            </div>
+            <div class="news">
+              <h2>Korean Perl Workshop 2008: Rising Perl</h2>
               <p class="meta meta_top">2008년 08월 08일 by keedi</p>
               <ul>
                 <li>
