--- a/trunk/www-framework/kpw/template/tt/user/default.html
+++ b/trunk/www-framework/kpw/template/tt/user/default.html
@@ -11,8 +11,10 @@
                 <fieldset>
                   <legend>등록확인</legend>
                   <dl>
-		    <dt><label for="email">email</label>: </dt><dd><input type="text" name="email" size="30" id="email" /></dd>
-		    <dt><label for="password">비밀번호</label>: </dt><dd><input type="password" name="password" size="10" id="password" /></dd>
+                    <dt> <label for="email">전자우편</label>: </dt>
+                    <dd> <input type="text" name="email" size="30" id="email" /> </dd>
+                    <dt> <label for="password">비밀번호</label>: </dt>
+                    <dd> <input type="password" name="password" size="10" id="password" /> </dd>
                   </dl>
                   <div class="button"><input type="submit" value="등록확인" /></div>
                 </fieldset>
