--- a/www-framework/kpw/template/tt/default/default.html
+++ b/www-framework/kpw/template/tt/default/default.html
@@ -24,7 +24,7 @@
             </div>
             <div class="news">
               <h2>Korean Perl Workshop 2008: Rising Perl</h2>
-              <p class="meta">2008년 08월 08일 by keedi</p>
+              <p class="meta meta_top">2008년 08월 08일 by keedi</p>
               <ul>
                 <li>
                   <b>시간:</b>
