--- a/www-framework/kpw/template/tt/default/default.html
+++ b/www-framework/kpw/template/tt/default/default.html
@@ -1,5 +1,21 @@
             <h1>Korean Perl Workshop 2008: Rising Perl</h1>
             <div class="news">
+              <h2>1차 등록 마감은 8월 20일 수요일 입니다.</h2>
+              <p class="meta">2008년 08월 19일 by keedi</p>
+              <p>
+                현재 1차 등록이 진행중인 상태입니다. 사전 등록을 하신 후
+                8월 20일 수요일까지 입금을 해주셔야 참가 확정 상태가
+                되십니다. 1차 등록 인원 분들 중에서 참가 확정을 못하실
+                경우 대기자 분들께로 사전 등록의 기회가 넘어갑니다.
+                대기자 분들께는 저희가 직접 연락을 드리는 방식으로
+                진행할 예정입니다.
+              </p>
+              <p>
+                사전 등록 진행 중 입금확인 관련해서 문의주신 분들은
+                메일드린대로 따로 처리하고 있으니 걱정마시기 바랍니다. :-)
+              </p>
+            </div>
+            <div class="news">
               <h2>현재 등록시 대기자 명단으로 올라갑니다!</h2>
               <p class="meta">2008년 08월 14일 by keedi</p>
               <p>
