--- a/trunk/www-framework/kpw/template/tt/default/faq.html
+++ b/trunk/www-framework/kpw/template/tt/default/faq.html
@@ -20,7 +20,8 @@
             </div>
             <div class="faq">
               <p class="question">
-                <b>Q:</b> 사전 등록을 하고 입금을 한 후에 행사 당일 불참아면 어떻게 되나요?
+                <b>Q:</b> 사전 등록을 하고 입금을 한 후에 행사 당일
+		참석하지 못하는 경우 등록비 환불이 가능한가요?
               </p>
               <div class="answer">
                 <p>
