--- a/trunk/slide/mkslide/slide.css
+++ b/trunk/slide/mkslide/slide.css
@@ -1,39 +1,45 @@
-.frame{
+.frame {
     /* position: absolute; */
     width:    100%;
-    height:   640px;
+    height:   750px;
 }
-p{
-    font-size:130%;
+body {
+  font-size:        100%;
+  background-color: #031d40;
+  color:            #dddddd;
 }
-body{
-    font-size:100%;
-    background-color: #C4D6E2;
-    color:#000
+a {
+  color: #ffffff;
 }
 .screen {
-    border: outset 2px;
-    margin: 0;
-    padding: 0.5em;
-    font-family: sans-serif;
-    font-size:   300%;
-    text-align:  center;
-    vertical-align: middle;
-    background: transparent url(logo.png) no-repeat top left;
+    border:           outset 2px;
+    margin:           0;
+    padding:          2.0em 1.0em 1.0em 1.0em;
+    font-family:      sans-serif;
+    font-size:        300%;
+    text-align:       center;
+    vertical-align:   middle;
+    background:       transparent url(logo.png) no-repeat top left;
 }
 .screen pre {
-  border: dotted 1px;
-  text-align: left;
-  font-size:55%;
-  color: #0F0;
-  background-color:#000;
-  overflow: auto;
-  padding: 0.5em;
+  border:           dotted 1px;
+  text-align:       left;
+  font-size:        50%;
+  color:            #0F0;
+  background-color: #000;
+  overflow:         auto;
+  padding:          0.5em;
 }
-.screen ol,ul,dl{
-  text-align: left;
-  padding: 2em;
+.screen p {
+  font-size:  150%;
+  margin:     0.1em 0em 0.1em 0em;
+  padding:    0em;
 }
-.translated{
-     font-size: 18pt;
+.screen ol,ul,dl {
+  text-align: left;
+  margin:     0.3em 0em 0.1em 0em;
+  padding:    0em 3.0em 0em 3.0em;
+}
+.screen li {
+  padding: 0.1em;
 }
