--- a/slide/mkslide/slide.css
+++ b/slide/mkslide/slide.css
@@ -1,7 +1,7 @@
 .frame {
     /* position: absolute; */
     width:    100%;
-    height:   750px;
+    height:   760px;
 }
 body {
   font-size:        100%;
@@ -14,17 +14,20 @@ a {
 .screen {
     border:           outset 2px;
     margin:           0;
-    padding:          2.0em 1.0em 1.0em 1.0em;
+    padding:          1.8em 0.8em 1.0em 0.8em;
     font-family:      sans-serif;
     font-size:        300%;
     text-align:       center;
     vertical-align:   middle;
     background:       transparent url(logo.png) no-repeat top left;
 }
+.screen h1 {
+  font-size:  200%;
+}
 .screen pre {
   border:           dotted 1px;
   text-align:       left;
-  font-size:        50%;
+  font-size:        55%;
   color:            #0F0;
   background-color: #000;
   overflow:         auto;
@@ -37,8 +40,8 @@ a {
 }
 .screen ol,ul,dl {
   text-align: left;
-  margin:     0.3em 0em 0.1em 0em;
-  padding:    0em 2.0em 0em 2.0em;
+  margin:     0.5em 0em 0.2em 0em;
+  padding:    0em 1.5em 0em 1.5em;
 }
 .screen li {
   padding: 0.1em;
