--- a/www-framework/kpw/template/tt/default/default.html
+++ b/www-framework/kpw/template/tt/default/default.html
@@ -1,5 +1,23 @@
             <h1>Korean Perl Workshop 2008: Rising Perl</h1>
             <div class="news">
+              <h2>사전 등록 마감으로 현장 등록 불가능합니다!</h2>
+              <p class="meta">2008년 08월 20일 by keedi</p>
+              <p>
+                현재 1차 사전 등록이 수요일로 끝납니다.
+                1차 사전등록 인원중에 아직 등록 확정 안되신 분이
+                다섯여분에 불과할 정도로 높은 참석률을 보이시는데다가,
+                대기등록 인원이 50명에 가까운 상황이라 사실 대기하시는
+                분들 중 과연 몇 분이나(많아도 5분?) 등록이 가능할지도
+                의문입니다. 따라서 현장 등록은 현실적으로 불가능함을
+                양해부탁드립니다.
+              </p>
+              <p>
+                다음 행사 준비시에는 더욱 많은 분들께서 수월하게
+                등록하시고 참석하실 수 있도록 최선을 다하겠습니다. :-)
+                많은 관심과 성원을 보내주셔서 고맙습니다.
+              </p>
+            </div>
+            <div class="news">
               <h2>1차 등록 마감은 8월 20일 수요일 입니다.</h2>
               <p class="meta">2008년 08월 19일 by keedi</p>
               <p>
