강차훈님 발표 링크 등록 [1/2]

--- a/trunk/www-framework/kpw/template/tt/default/presentations.html
+++ b/trunk/www-framework/kpw/template/tt/default/presentations.html
@@ -1,9 +1,10 @@
-            <h1>발표 자료 모음</h1>
+            <h1>발표 자료</h1>
             <div class="link">
               <h3>정규 발표 (Regular Talk)</h3>
               <ul>
                 <li>
                   최신 스타일 Perl로 개과천선하기 (aero eq 강차훈)
+                  [ <a href="[% c.config.url %]presentations/kpw2008_new_perl">Online</a> | <a href="[% c.config.url %]presentations/kpw2008_new_perl.zip">Download</a> ]
                 </li>
                 <li>
                   Perl Basic Skill Up (펄아비 eq 전종필)
