발표자료 추가

--- a/trunk/www-framework/kpw/template/tt/default/presentations.html
+++ b/trunk/www-framework/kpw/template/tt/default/presentations.html
@@ -8,18 +8,22 @@
                 </li>
                 <li>
                   Perl Basic Skill Up (펄아비 eq 전종필)
+                  [ <a href="[% c.config.url %]presentations/KPW_Perl_Basic_Skill_Up.ppt">Download</a> ]
                 </li>
                 <li>
                   Location Prediction for Indoor Sensor Networks (verve eq 김동민)
+                  [ <a href="[% c.config.url %]presentations/20080823_dmkim_location_prediction.pdf">Download</a> ]
                 </li>
                 <li>
                   Web2RSS with Perl (kiseok eq 김기석)
+                  [ <a href="[% c.config.url %]presentations/Web2RSS_with_Perl.pdf">Download</a> ]
                 </li>
                 <li>
                   Introduction to Catalyst for Rapid Web Development (song eq 한송희)
                 </li>
                 <li>
                   Gtk2-Perl을 사용한 크로스 플랫폼 GUI 환경 (keedi eq 김도형)
+                  [ <a href="[% c.config.url %]presentations/cross_platform_gui_environment_with_gtk2_perl">Online</a> ] | [ <a href="[% c.config.url %]presentations/cross_platform_gui_environment_with_gtk2_perl.zip">Download</a> ]
                 </li>
                 <li>
                   Bioperl: The biological module of Perl language (Dr. Jong Bhak KOBIC, Daejeon, Korea eq 박종화 박사)
@@ -35,6 +39,7 @@
                 </li>
                 <li>
                   perl 을 이용한 영상 오브젝트 추출 (sng2nara eq 김현승)
+                  [ <a href="[% c.config.url %]presentations/Extraction_Movie_Object_with_Perl.pptx">Download</a> ]
                 </li>
                 <li>
                   즐거운 Perl 기억 남기기 - Parse::RecDescent (saillinux eq 김희원)
@@ -47,21 +52,25 @@
               <ul>
                 <li>
                   Practical Extraction and Report for NS2 (verve eq 김동민)
+                  [ <a href="[% c.config.url %]presentations/20080823_dmkim_ns2_perl.pdf">Download</a> ]
                 </li>
                 <li>
                   당신은 이미 Perl 하고 있다 - 소스필터를 이용한 몰래 Perl 시키기 (saillinux eq 김희원)
                 </li>
                 <li>
                   RSS 번역기 만들기 (aero eq 강차훈)
+                  [ <a href="[% c.config.url %]presentations/kpw2008_rss_translator">Online</a> ] | [ <a href="[% c.config.url %]presentations/kpw2008_rss_translator.zip">Download</a> ]
                 </li>
                 <li>
                   The Secret of Class::Data::Inheritable (song eq 한송희)
                 </li>
                 <li>
                   Javascript as Mini-lang on Perl (sng2nara eq 김현승)
+                  [ <a href="[% c.config.url %]presentations/Javascript_as_Mini_lang_on_Perl.pptx">Download</a> ]
                 </li>
                 <li>
                   CPANning without Network Connection (keedi eq 김도형)
+                  [ <a href="[% c.config.url %]presentations/cpanning_without_network_connection">Online</a> ] | [ <a href="[% c.config.url %]presentations/cpanning_without_network_connection.zip">Download</a> ]
                 </li>
               </ul>
              </div> <!-- link -->
