전종필님 온라인 페이지 추가

--- a/trunk/www-framework/kpw/template/tt/default/presentations.html
+++ b/trunk/www-framework/kpw/template/tt/default/presentations.html
@@ -8,7 +8,7 @@
                 </li>
                 <li>
                   Perl Basic Skill Up (펄아비 eq 전종필)
-                  [ <a href="[% c.config.url %]presentations/KPW_Perl_Basic_Skill_Up.ppt">Download</a> ]
+                  [ <a href="http://www.perl.or.kr/article/perlbsu.html">Online (전종필님의 자세한 설명 포함 :)</a> | <a href="[% c.config.url %]presentations/KPW_Perl_Basic_Skill_Up.ppt">Download</a> ]
                 </li>
                 <li>
                   Location Prediction for Indoor Sensor Networks (verve eq 김동민)
