--- a/trunk/www-framework/kpw/template/tt/default/presentations.html
+++ b/trunk/www-framework/kpw/template/tt/default/presentations.html
@@ -20,6 +20,7 @@
                 </li>
                 <li>
                   Introduction to Catalyst for Rapid Web Development (song eq 한송희)
+                  [ <a href="[% c.config.url %]presentations/catalyst_basic">Online</a> ]
                 </li>
                 <li>
                   Gtk2-Perl을 사용한 크로스 플랫폼 GUI 환경 (keedi eq 김도형)
@@ -46,8 +47,8 @@
                   즐거운 Perl 기억 남기기 - Parse::RecDescent (saillinux eq 김희원)
                 </li>
               </ul>
-             </div> <!-- link -->
-
+             </div>
+             <!-- link -->
              <div class="link">
               <h3>짧은 발표 (Lightening Talk)</h3>
               <ul>
@@ -64,6 +65,7 @@
                 </li>
                 <li>
                   The Secret of Class::Data::Inheritable (song eq 한송희)
+                  [ <a href="[% c.config.url %]presentations/class_data_inheritable">Online</a> ]
                 </li>
                 <li>
                   Javascript as Mini-lang on Perl (sng2nara eq 김현승)
@@ -74,4 +76,5 @@
                   [ <a href="[% c.config.url %]presentations/cpanning_without_network_connection">Online</a> ] | [ <a href="[% c.config.url %]presentations/cpanning_without_network_connection.zip">Download</a> ]
                 </li>
               </ul>
-             </div> <!-- link -->
+             </div>
+	     <!-- link -->
